Editor's review changes

--- a/DimitrisKafetzis-cv-en-anonymised.tex
+++ b/DimitrisKafetzis-cv-en-anonymised.tex
@@ -158,8 +158,8 @@
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[*] Coordinated development of cross functional features
-								amongst teams of different locations with a goal to rollout
-								our solution to a new tier 1 customer
+								amongst teams of different locations with the goal of rolling
+								out our solution to a new tier 1 customer
 							\item[*] Owned the data migration including transaction history
 								and user activity onto the new platform
 							\item[*] Designed distributed queries for Informix database
