--- a/DimitrisKafetzis-cv-en-colorsAndIcons.tex
+++ b/DimitrisKafetzis-cv-en-colorsAndIcons.tex
@@ -11,7 +11,7 @@
 \cvjobtitle{Principal Software Engineer}
 \cvdate{}
 \cvnumberphone{}
-\cvaddress{Potong Pasir, Singapore}
+\cvaddress{Singapore}
 \cvsite{}
 \cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{in/kafetzisd}}
 \cvgithub{\href{https://github.com/amolofos}{github.com/amolofos}}
@@ -84,7 +84,7 @@
 
 		\section{{\small \faUniversity} Education}
 		\begin{center}
-			Not completed tertiary education
+			Incomplete tertiary education
 		\end{center}
 		I entered on 2003 the Electrical Engineering and Computer Science department
 		of the Polytechnic Faculty, University of Patras, Greece, {\scriptsize\href{http://www.ece.upatras.gr}{www.ece.upatras.gr}},
@@ -184,8 +184,8 @@
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[*] Coordinated development of cross functional features
-								amongst teams of different locations with a goal to rollout
-								our solution to a new tier 1 customer
+								amongst teams of different locations with the goal of rolling
+								out our solution to a new tier 1 customer
 							\item[*] Owned the data migration including transaction history
 								and user activity onto the new platform
 							\item[*] Designed distributed queries for Informix database
@@ -218,7 +218,7 @@
 							\item[*] Performed multiple production releases
 							\item[*] Wrote the extraction scripts of a multi component data migration
 							\item[*] Refined and improved my team's release process
-							\item[*] Integrated with Paypal \& Safecharge payment providers tokenizing
+							\item[*] Collaborated with Paypal and Safecharge payment providers tokenizing
 							credit card storage reducing system's security exposure.
 						\end{enumerate}
 					}
