--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -39,8 +39,8 @@
 					\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
 						funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
 						to 1 per year
-					\item[\textasteriskcentered] Enhanced the performance of slow database queries bring
-						the number of production incidents due to human design error down to zero (0)
+					\item[\textasteriskcentered] Enhanced the performance of slow database queries reducing
+						the number of production incidents due to human design error to zero (0)
 					\item[\textasteriskcentered] Investigated more than 20 high profile incidents and
 						presented 4 of them to C level stakeholders
 					\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed,
@@ -56,11 +56,11 @@
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Coordinated development of cross functional features
-						amongst teams of different locations with a goal to rollout
+						amongst teams of different locations with the goal of rolling out
 						our solution to a new tier 1 customer
 					\item[\textasteriskcentered] Owned the data migration into the new
 						platform including 100 million rows of transaction history and
-						user activity and completed in under 3 hours
+						user activity, completed in under 3 hours
 					\item[\textasteriskcentered] Designed distributed queries for Informix database
 						materialising the reporting needs of the Finance and Trading departments
 					\item[\textasteriskcentered] Influenced the release process from code to
@@ -77,8 +77,8 @@
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Wrote and performed the extraction of
-						one billion rows during uptime and no impact to operations
-					\item[\textasteriskcentered] Integrated with Paypal \& Safecharge
+						one billion rows during uptime with no impact to operations
+					\item[\textasteriskcentered] Collaborated with Paypal and Safecharge
 						payment providers tokenizing credit card information removing
 						the need for PCI compliance
 				\end{enumerate}
@@ -90,10 +90,10 @@
 		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
 			and larger teams
 		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted relational database queries and reviewed
-			the performance of data intensive rdbms systems for the past 7 years
+			the performance of data intensive rdbms systems for the 7 years
 		\item[\textasteriskcentered] \textit{Ansible \& Python}: Established the correct usage of Ansible scripts reducing the complexity
 			of the deployment process and developed Ansible modules increasing the effectiveness of our scripts
-		\item[\textasteriskcentered] \textit{Java \& Springboot}: Enhanced APIs based on Springboot Java 8 applications for the past 2 years
+		\item[\textasteriskcentered] \textit{Java \& Springboot}: Enhanced APIs based on Springboot Java 8 applications for 2 years
 	\end{enumerate}
 
 	\section{Education}
