--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -17,10 +17,10 @@
 \cvjobtitle{Principal Software Engineer}
 \cvdate{}
 \cvnumberphone{}
-\cvaddress{Potong Pasir, Singapore}
+\cvaddress{Singapore}
 \cvsite{}
-\cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{in/kafetzisd}}
-\cvgithub{\href{https://github.com/amolofos}{github.com/amolofos}}
+\cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{kafetzisd}}
+\cvgithub{\href{https://github.com/amolofos}{amolofos}}
 \cvmail{kafetzis.dimitris.andreas@gmail.com}
 
 \begin{document}
@@ -83,7 +83,7 @@
 		\end{tikzpicture}
 
 		\section{Education}
-		\centerline{Not completed tertiary education}
+		\centerline{Incomple tertiary education}
 		DO, Electrical Engineering and Computer Science, University of Patras, Greece \hfill {\scriptsize Sep 2003 - Jul 2009}
 
 		\section{Daily work activities}
@@ -181,11 +181,11 @@
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[\textasteriskcentered] Coordinated development of cross functional features
-								amongst teams of different locations with a goal to rollout
-								our solution to a new tier 1 customer
+								amongst teams of different locations with with the goal of rolling
+								out our solution to a new tier 1 customer
 							\item[\textasteriskcentered] Owned the data migration into the new
 								platform including 100 million rows of transaction history and
-								user activity and completed in under 3 hours
+								user activity, completed in under 3 hours
 							\item[\textasteriskcentered] Designed distributed queries for Informix database materialising
 								the reporting needs of the Finance and Trading departments
 							\item[\textasteriskcentered] Influenced the release process from code to
@@ -217,8 +217,8 @@
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[\textasteriskcentered] Wrote and performed the extraction of
-								one billion rows during uptime and no impact to operations
-							\item[\textasteriskcentered] Integrated with Paypal \& Safecharge
+								one billion rows during uptime with no impact to operations
+							\item[\textasteriskcentered] Collaborated with Paypal and Safecharge
 								payment providers tokenizing credit card information removing the\
 								need for PCI compliance
 						\end{enumerate}
@@ -252,14 +252,14 @@
 		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
 			and larger teams
 		\item[\textasteriskcentered] \textit{Distributed systems}: Implemented features that spanned across multiple services,
-			APIs and modules. Architectured distributed Linux based systems for the past 5 years
+			APIs and modules. Created distributed Linux based systems for 5 years
 		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted relational database queries and reviewed
-			the performance of data intensive rdbms systems for the past 7 years
+			the performance of data intensive rdbms systems for 7 years
 		\item[\textasteriskcentered] \textit{Maven, Jenkins etc}: Defined the build process of Java and database modules
 		\item[\textasteriskcentered] \textit{Ansible \& Python}: Established the correct usage of Ansible scripts reducing the complexity
 			of the deployment process and developed Ansible modules increasing the effectiveness of our scripts
 		\item[\textasteriskcentered] \textit{Java \& Springboot}: Enhanced APIs based on Springboot Java 8
-			applications for the past 2 years
+			applications for 2 years
 	\end{enumerate}
 
 \end{document}
