Adding the latest job position of 2021-09

--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -16,17 +16,29 @@
 		\href{mailto:\cvmail}{\cvmail} \space \textbar \space \cvlinkedin \space \textbar \space \cvgithub \\
 		Greek working under \textit{Employment Pass} in \cvaddress
 	\end{center}
+	My experience spans across 9+ YoE designing and building heavily transactional, distributed,
+	relational database backed systems, The last 2 years I have made a shift on the SRE problem domain.
 
 	\section{Work experience}
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 		\item[] \cvExperience
+		{Site Reliabily Engineer (SRE)}
+		{Undisclosed - under probation}
+		{Singapore}
+		{Sept 2021 - Present}
+		{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+				\item[\textasteriskcentered] Developed a side car measuring accurately the availability SLI of 150 services public facing services.
+			\end{enumerate}
+		}
+
+		\item[] \cvExperience
 			{Principal Integration Engineer \textbar SRE}
 			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 			{Singapore}
-			{Aug 2020 - Present}
+			{Aug 2020 - Sept 2021 (1yr 1mo)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[*] Defined the initial process for an SRE rota across two teams located in multiple locations
-					\item[*] Configured prometheus and grafana infrastructure reporting accurately the production issues reducing the noise of the daily SRE checks
+					\item[\textasteriskcentered] Defined the initial process for an SRE rota across two teams located in multiple locations
+					\item[\textasteriskcentered] Configured prometheus and grafana infrastructure reducing the manual daily SRE monitoring activities
 				\end{enumerate}
 			}
 
@@ -55,14 +67,12 @@
 			{Oct 2015 - Aug 2018 (2yrs 11mos)}
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Coordinated development of cross functional features
-						amongst teams of different locations with the goal of rolling out
-						our solution to a new tier 1 customer
-					\item[\textasteriskcentered] Owned the data migration into the new
-						platform including 100 million rows of transaction history and
-						user activity, completed in under 3 hours
-					\item[\textasteriskcentered] Designed distributed queries for Informix database
-						materialising the reporting needs of the Finance and Trading departments
+					\item[\textasteriskcentered] Coordinated cross functional features teams
+						in multiple locations onboarding a tier 1 customer
+					\item[\textasteriskcentered] Owned the data migration of 100 million rows of
+						transaction history completed in under 3 hours
+					\item[\textasteriskcentered] Designed distributed reportingqueries for Informix
+						database for the Finance and Trading departments
 					\item[\textasteriskcentered] Influenced the release process from code to
 						production increasing the delivery capacity of the team
 					\item[\textasteriskcentered] Refactored the Ansible deployment scripts
@@ -76,11 +86,10 @@
 			{Nov 2012 - Sep 2015 (2 yrs 11mos)}
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Wrote and performed the extraction of
+					\item[\textasteriskcentered] Wrote and executed the extraction of
 						one billion rows during uptime with no impact to operations
-					\item[\textasteriskcentered] Collaborated with Paypal and Safecharge
-						payment providers tokenizing credit card information removing
-						the need for PCI compliance
+					\item[\textasteriskcentered] Removed the need for PCI compliance by
+						integrating with tokenized credit card providers
 				\end{enumerate}
 			}
 	\end{enumerate}
@@ -89,8 +98,7 @@
 	\begin{enumerate}[labelwidth=!, labelindent=22pt, leftmargin=*, rightmargin=15pt]
 		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
 			and larger teams
-		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted relational database queries and reviewed
-			the performance of data intensive rdbms systems for the 7 years
+		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}:Reviewed the performance of data intensive rdbms systems
 		\item[\textasteriskcentered] \textit{Ansible \& Python}: Established the correct usage of Ansible scripts reducing the complexity
 			of the deployment process and developed Ansible modules increasing the effectiveness of our scripts
 		\item[\textasteriskcentered] \textit{Java \& Springboot}: Enhanced APIs based on Springboot Java 8 applications for 2 years
