--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -3,6 +3,7 @@
 \setlength\cvMargin{1cm}
 \setlength\cvSideWidth{0.35\paperwidth-\cvMargin}
 \setlength\cvMainWidth{\paperwidth-\cvSideWidth-\cvMargin}
+\setlength\cvSideWidthText{\cvSideWidth+0.5cm}
 \setlength\cvEventTextWidth{\cvMainWidth-3\cvMargin}
 
 \setlength\cvNodeSep{0.75cm}
@@ -31,13 +32,10 @@
 		\sloppy
 
 		\begin{tikzpicture}
-			\node[personalDetailsBox] (PersonalDetails){
+			\node[personalDetailsBox] (PersonalDetails) {
 
 				\begin{minipage}{\cvSideWidth}
 					\section{\textbf{\cvname}}
-					\begin{center}
-						{\Large\color{black!80}\cvjobtitle \\}
-					\end{center}
 
 					\begin{tikzpicture}[every node/.style={inner sep=0pt, outer sep=0pt}]
 						\matrix [
@@ -82,9 +80,17 @@
 			};
 		\end{tikzpicture}
 
+		\begin{varwidth}{\cvSideWidthText}
+			\centerline{}
+			My experience spans across 9+ YoE designing and building heavily transactional, distributed,
+			relational database backed systems, The last 2 years I have made a shift on the SRE problem domain.
+		\end{varwidth}
+
 		\section{Education}
-		\centerline{Incomple tertiary education}
-		DO, Electrical Engineering and Computer Science, University of Patras, Greece \hfill {\scriptsize Sep 2003 - Jul 2009}
+		\begin{varwidth}{\cvSideWidthText}
+			\centerline{Incomple tertiary education}
+			DO, Electrical Engineering and Computer Science, University of Patras, Greece \hfill {\scriptsize Sep 2003 - Jul 2009}
+		\end{varwidth}
 
 		\section{Daily work activities}
 		\begin{tikzpicture}
@@ -104,29 +110,54 @@
 		\section{Work experience}
 		\begin{tikzpicture}][every node/.style={inner sep=0pt, outer sep=0pt}]
 
+			% item 5
+			\node[
+				eventDotText]
+				(item 5 header)
+				{\phantom{Evening}};
+			\node[
+				eventDotText]
+				(item 5)
+				{\cvExperience
+					{Site Reliabily Engineer (SRE)}
+					{Undisclosed - under probation}
+					{Singapore}
+					{2021-09 - Today}
+					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+						\item[\textasteriskcentered] Developed a side car measuring accurately the availability SLI of 150 services public facing services.
+					\end{enumerate}
+					}
+				};
+			\node[
+				left=\cvTimeDotSepMain of item 5 header,
+				timeDot]
+				(start)
+				{};
+
 			% item 4
 			\node[
+				below=\cvSectionSep of item 5.south west,
 				eventDotText]
 				(item 4 header)
 				{\phantom{Evening}};
 			\node[
+				below=\cvSectionSep of item 5.south west,
 				eventDotText]
 				(item 4)
 				{\cvExperience
 					{Principal Integration Engineer \textbar SRE}
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
-					{2020-08 - Today}
+					{2020-08 - 2021-09 (1yr 1mo)}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[*] Defined the initial process for an SRE rota across two teams located in multiple locations
-							\item[*] Configured prometheus and grafana infrastructure reporting accurately the production issues reducing the noise of the daily SRE checks
+							\item[\textasteriskcentered] Defined the initial process for an SRE rota across two teams located in multiple locations
+							\item[\textasteriskcentered]] Configured prometheus and grafana infrastructure reducing the manual daily SRE monitoring activities
 						\end{enumerate}
 					}
 				};
 			\node[
 				left=\cvTimeDotSepMain of item 4 header,
 				timeDot]
-				(start)
 				{};
 			\node[
 				right=\cvTimeDotSepSecondary of item 4 header,
@@ -150,11 +181,11 @@
 					{Singapore}
 					{2018-09 - 2020-07 (1yr 11mos)}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[*] Hardened the funding flow ensuring eWallet integrity
-							\item[*] Enchanced the performance of slow database queries
-							\item[*] Investigated high profile production issues and present
+							\item[\textasteriskcentered] Hardened the funding flow ensuring eWallet integrity
+							\item[\textasteriskcentered] Enchanced the performance of slow database queries
+							\item[\textasteriskcentered] Investigated high profile production issues and present
 								them to C level stakeholders
-							\item[*] Migrated 80 million lottery bets to renewed data model
+							\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed data model
 						\end{enumerate}
 					}
 				};
@@ -180,14 +211,12 @@
 					{Oct 2015 - Aug 2018 (2yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[\textasteriskcentered] Coordinated development of cross functional features
-								amongst teams of different locations with with the goal of rolling
-								out our solution to a new tier 1 customer
-							\item[\textasteriskcentered] Owned the data migration into the new
-								platform including 100 million rows of transaction history and
-								user activity, completed in under 3 hours
-							\item[\textasteriskcentered] Designed distributed queries for Informix database materialising
-								the reporting needs of the Finance and Trading departments
+							\item[\textasteriskcentered] Coordinated cross functional features teams
+								in multiple locations onboarding a tier 1 customer
+							\item[\textasteriskcentered] Owned the data migration of 100 million rows of
+								transaction history completed in under 3 hours
+							\item[\textasteriskcentered] Designed distributed reportingqueries for Informix
+								database for the Finance and Trading departments
 							\item[\textasteriskcentered] Influenced the release process from code to
 								production increasing the delivery capacity of the team
 							\item[\textasteriskcentered] Refactored the ansible deployment scripts
@@ -216,11 +245,10 @@
 					{Nov 2012 - Sept 2015 (2 yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[\textasteriskcentered] Wrote and performed the extraction of
+							\item[\textasteriskcentered] Wrote and executed the extraction of
 								one billion rows during uptime with no impact to operations
-							\item[\textasteriskcentered] Collaborated with Paypal and Safecharge
-								payment providers tokenizing credit card information removing the\
-								need for PCI compliance
+							\item[\textasteriskcentered] Removed the need for PCI compliance by
+								integrating with tokenized credit card providers
 						\end{enumerate}
 					}
 				};
@@ -252,9 +280,9 @@
 		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
 			and larger teams
 		\item[\textasteriskcentered] \textit{Distributed systems}: Implemented features that spanned across multiple services,
-			APIs and modules. Created distributed Linux based systems for 5 years
-		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted relational database queries and reviewed
-			the performance of data intensive rdbms systems for 7 years
+			APIs and modules on distributed Linux based systems.
+		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}: Crafted queries and reviewed the performance of data
+			intensive rdbms systems
 		\item[\textasteriskcentered] \textit{Maven, Jenkins etc}: Defined the build process of Java and database modules
 		\item[\textasteriskcentered] \textit{Ansible \& Python}: Established the correct usage of Ansible scripts reducing the complexity
 			of the deployment process and developed Ansible modules increasing the effectiveness of our scripts
