--- a/DimitrisKafetzis-cv-en-colorsAndIcons.tex
+++ b/DimitrisKafetzis-cv-en-colorsAndIcons.tex
@@ -30,7 +30,6 @@
 					\begin{center}
 						\section{{\small \faVenusMars} Who am I?}
 						{\textbf{\Large\color{black}\cvname \\}}
-						{\Large\color{black!80}\cvjobtitle \\}
 					\end{center}
 
 					\begin{tikzpicture}[every node/.style={inner sep=0pt, outer sep=0pt}]
@@ -77,18 +76,18 @@
 		\end{tikzpicture}
 
 		\section{{\small \faInfo} About me}
-		My experience spans across 7+ years designing and building with highly
-		transactional, web, relational database backed systems, 5 years of which
-		on distributed platforms. I focus mainly in the backend services and
-		the persistence, database infrastructure.
+		\begin{varwidth}{\cvSideWidthText}
+			My experience spans across 9+ YoE designing and building heavily transactional, distributed,
+			relational database backed systems, The last 2 years I have made a shift on the SRE problem domain. \\
+		\end{varwidth}
 
 		\section{{\small \faUniversity} Education}
-		\begin{center}
-			Incomplete tertiary education
-		\end{center}
-		I entered on 2003 the Electrical Engineering and Computer Science department
-		of the Polytechnic Faculty, University of Patras, Greece, {\scriptsize\href{http://www.ece.upatras.gr}{www.ece.upatras.gr}},
-		attending 5 years of study without completing my Thesis and receiving the Diploma.
+		\begin{varwidth}{\cvSideWidthText}
+			\centerline{Incomple tertiary education}
+			I entered on 2003 the Electrical Engineering and Computer Science department
+			of the Polytechnic Faculty, University of Patras, Greece, {\scriptsize\href{http://www.ece.upatras.gr}{www.ece.upatras.gr}},
+			attending 5 years of study without completing my Thesis and receiving the Diploma. \\
+		\end{varwidth}
 
 		\section{{\small \faCalendar} Daily work activities}
 		\begin{tikzpicture}
@@ -108,28 +107,54 @@
 		\section{{\small \faBriefcase} Work experience}
 		\begin{tikzpicture}][every node/.style={inner sep=0pt, outer sep=0pt}]
 
+			% item 5
 			\node[
+				eventDotText]
+				(item 5 header)
+				{\phantom{Evening}};
+			\node[
+				eventDotText]
+				(item 5)
+				{\cvExperience
+					{Site Reliabily Engineer (SRE)}
+					{Undisclosed - under probation}
+					{Singapore}
+					{2021-09 - Today}
+					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+						\item[\textasteriskcentered] Developed a side car measuring accurately the availability SLI of 150 services public facing services.
+					\end{enumerate}
+					}
+				};
+			\node[
+				left=\cvTimeDotSepMain of item 5 header,
+				timeDot]
+				(start)
+				{};
+
+			% item 4
+			\node[
+				below=\cvSectionSep of item 5.south west,
 				eventDotText]
 				(item 4 header)
 				{\phantom{Evening}};
 			\node[
+				below=\cvSectionSep of item 5.south west,
 				eventDotText]
 				(item 4)
 				{\cvExperience
-					{Principal Integration Engineer | Site Reliability Engineer}
+					{Principal Engineer \textbar SRE}
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
-					{2020-08 - Today}
+					{2020-08 - 2021-09 (1yr 1mo)}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[*] Defined the initial process for an SRE rota across two teams located in multiple locations
-							\item[*] Configured prometheus and grafana infrastructure reporting accurately the production issues reducing the noise of the daily SRE checks
+							\item[\textasteriskcentered] Defined the initial process for an SRE rota across two teams located in multiple locations
+							\item[\textasteriskcentered] Configured prometheus and grafana infrastructure reducing the manual daily SRE monitoring activities
 						\end{enumerate}
 					}
 				};
 			\node[
 				left=\cvTimeDotSepMain of item 4 header,
 				timeDot]
-				(start)
 				{};
 			\node[
 				right=\cvTimeDotSepSecondary of item 4 header,
@@ -151,13 +176,13 @@
 					{Principal Software Engineer}
 					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
 					{Singapore}
-					{2018-09 - 2020-07}
+					{2018-09 - 2020-07 (1yr 11mos)}
 					{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[*] Hardened the funding flow ensuring eWallet integrity
-							\item[*] Enchanced the performance of slow database queries
-							\item[*] Investigated high profile production issues and present
+							\item[\textasteriskcentered] Hardened the funding flow ensuring eWallet integrity
+							\item[\textasteriskcentered] Enchanced the performance of slow database queries
+							\item[\textasteriskcentered] Investigated high profile production issues and present
 								them to C level stakeholders
-							\item[*] Migrated 80 million lottery bets to renewed data model
+							\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed data model
 						\end{enumerate}
 					}
 				};
@@ -183,14 +208,14 @@
 					{2015-10 - 2018-08 (2yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[*] Coordinated development of cross functional features
-								amongst teams of different locations with the goal of rolling
-								out our solution to a new tier 1 customer
-							\item[*] Owned the data migration including transaction history
-								and user activity onto the new platform
-							\item[*] Designed distributed queries for Informix database
-							\item[*] Defined the release process from code to production
-							\item[*] Rewrote the ansible deployment scripts reducing production incidents
+							\item[\textasteriskcentered] Coordinated cross functional features teams
+								in multiple locations, part of onboarding a new tier 1 customer
+							\item[\textasteriskcentered] Owned the data migration of 100 million rows of
+								transaction history completed in under 3 hours
+							\item[\textasteriskcentered] Designed distributed reportingqueries for Informix
+								database for the Finance and Trading departments
+							\item[\textasteriskcentered] Defined the release process from code to production
+							\item[\textasteriskcentered] Rewrote the ansible deployment scripts reducing production incidents
 						\end{enumerate}
 					}
 				};
@@ -215,11 +240,11 @@
 					{2012-11 - 2015-09 (2 yrs 11mos)}
 					{
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-							\item[*] Performed multiple production releases
-							\item[*] Wrote the extraction scripts of a multi component data migration
-							\item[*] Refined and improved my team's release process
-							\item[*] Collaborated with Paypal and Safecharge payment providers tokenizing
-							credit card storage reducing system's security exposure.
+							\item[\textasteriskcentered] Performed multiple production releases
+							\item[\textasteriskcentered] Wrote the extraction scripts of a multi component data migration
+							\item[\textasteriskcentered] Refined and improved my team's release process
+							\item[\textasteriskcentered] Removed the need for PCI compliance by
+								integrating with tokenized credit card providers
 						\end{enumerate}
 					}
 				};
