--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -16,20 +16,23 @@
 		\href{mailto:\cvmail}{\cvmail} \space \textbar \space \cvlinkedin \space \textbar \space \cvgithub \\
 		Greek working under \textit{Employment Pass} in \cvaddress
 	\end{center}
-	My experience spans across 9+ YoE designing and building heavily transactional, distributed,
-	relational database backed systems, The last 2 years I have made a shift on the SRE problem domain.
+	My experience spans across 10 YoE designing and building heavily transactional, distributed,
+	relational database backed systems. The last 2 years I have made a shift on the SRE problem domain.
 
 	\section{Work experience}
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 		\item[] \cvExperience
-		{Site Reliabily Engineer (SRE)}
-		{Undisclosed - under probation}
-		{Singapore}
-		{Sept 2021 - Present}
-		{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-				\item[\textasteriskcentered] Developed a side car measuring accurately the availability SLI of 150 services public facing services.
-			\end{enumerate}
-		}
+			{Site Reliabily Engineer (SRE)}
+			{\href{https://www.bytedance.com/en}{Bytedance}}
+			{Singapore}
+			{Sept 2021 - Present}
+			{
+				\\ Joined the newly formed SRE team supported the Global E-commerce function of TikTok
+				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+					\item[\textasteriskcentered] Implemented a Kubernetes sidecar measuring the availability SLI of more than 200 HTTP services
+					\item[\textasteriskcentered] Designed and implemented an incident record tool reducing the manual bookkeeping activities during oncall cases
+				\end{enumerate}
+			}
 
 		\item[] \cvExperience
 			{Principal Integration Engineer \textbar SRE}
@@ -67,8 +70,6 @@
 			{Oct 2015 - Aug 2018 (2yrs 11mos)}
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Coordinated cross functional features teams
-						in multiple locations onboarding a tier 1 customer
 					\item[\textasteriskcentered] Owned the data migration of 100 million rows of
 						transaction history completed in under 3 hours
 					\item[\textasteriskcentered] Designed distributed reportingqueries for Informix
@@ -92,16 +93,6 @@
 						integrating with tokenized credit card providers
 				\end{enumerate}
 			}
-	\end{enumerate}
-
-	\section{Skills \& Technology stack}
-	\begin{enumerate}[labelwidth=!, labelindent=22pt, leftmargin=*, rightmargin=15pt]
-		\item[\textasteriskcentered] \textit{Agile}: Utilised a combination of Kanban and Scrum techniques in small (4 members)
-			and larger teams
-		\item[\textasteriskcentered] \textit{Rdbms, informix \& postgres}:Reviewed the performance of data intensive rdbms systems
-		\item[\textasteriskcentered] \textit{Ansible \& Python}: Established the correct usage of Ansible scripts reducing the complexity
-			of the deployment process and developed Ansible modules increasing the effectiveness of our scripts
-		\item[\textasteriskcentered] \textit{Java \& Springboot}: Enhanced APIs based on Springboot Java 8 applications for 2 years
 	\end{enumerate}
 
 	\section{Education}
