SG Digital --> OpenBet

--- a/DimitrisKafetzis-cv-en-colorsAndIcons.tex
+++ b/DimitrisKafetzis-cv-en-colorsAndIcons.tex
@@ -145,7 +145,7 @@
 				(item 4)
 				{\cvExperience
 					{Principal Engineer \textbar SRE}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{2020-08 - 2021-09 (1yr 1mo)}
 					{
@@ -177,7 +177,7 @@
 				(item 3)
 				{\cvExperience
 					{Principal Software Engineer}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{2018-09 - 2020-07 (1yr 11mos)}
 					{
@@ -207,7 +207,7 @@
 				(item 2)
 				{\cvExperience
 					{Senior Software Engineer}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{2015-10 - 2018-08 (2yrs 11mos)}
 					{
@@ -237,7 +237,7 @@
 				eventDotText]
 				(item 1)
 				{\cvExperience{Software Engineer}
-					{\href{http://www.openbet.com}{OpenBet Ltd (Part of NYX Gaming Group)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Athens, Greece}
 					{2012-11 - 2015-09 (2 yrs 11mos)}
 					{
