--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -36,7 +36,7 @@
 
 		\item[] \cvExperience
 			{Principal Integration Engineer \textbar SRE}
-			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+			{\href{https://www.openbet.com/}{OpenBet}}
 			{Singapore}
 			{Aug 2020 - Sept 2021 (1yr 1mo)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
@@ -47,7 +47,7 @@
 
 		\item[] \cvExperience
 			{Principal Software Engineer}
-			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+			{\href{https://www.openbet.com/}{OpenBet}}
 			{Singapore}
 			{Sep 2018 - Jul 2020 (1yr 11mos)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
@@ -65,7 +65,7 @@
 
 		\item[] \cvExperience
 			{Senior Software Engineer}
-			{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+			{\href{https://www.openbet.com/}{OpenBet}}
 			{Singapore}
 			{Oct 2015 - Aug 2018 (2yrs 11mos)}
 			{
@@ -82,7 +82,7 @@
 			}
 
 		\item[]  \cvExperience{Software Engineer}
-			{\href{http://www.openbet.com}{OpenBet Ltd (Part of NYX Gaming Group)}}
+			{\href{https://www.openbet.com/}{OpenBet}}
 			{Athens, Greece}
 			{Nov 2012 - Sep 2015 (2 yrs 11mos)}
 			{
