--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -148,7 +148,7 @@
 				(item 4)
 				{\cvExperience
 					{Principal Integration Engineer \textbar SRE}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{2020-08 - 2021-09 (1yr 1mo)}
 					{
@@ -180,7 +180,7 @@
 				(item 3)
 				{\cvExperience
 					{Principal Software Engineer}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{2018-09 - 2020-07 (1yr 11mos)}
 					{
@@ -210,7 +210,7 @@
 				(item 2)
 				{\cvExperience
 					{Senior Software Engineer}
-					{\href{https://www.sgdigital.com/}{SG Digital (Division of Scientific Games Corporation)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{Oct 2015 - Aug 2018 (2yrs 11mos)}
 					{
@@ -242,7 +242,7 @@
 				eventDotText]
 				(item 1)
 				{\cvExperience{Software Engineer}
-					{\href{http://www.openbet.com}{OpenBet Ltd (Part of NYX Gaming Group)}}
+					{\href{https://www.openbet.com/}{OpenBet}}
 					{Athens, Greece}
 					{Nov 2012 - Sept 2015 (2 yrs 11mos)}
 					{
