End of Bytedance experience

--- a/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -121,12 +121,13 @@
 					{Site Reliabily Engineer (SRE)}
 					{\href{https://www.bytedance.com/en}{Bytedance}}
 					{Singapore}
-					{Sept 2021 - Present}
+					{Sept 2021 - Oct 2022}
 					{
 						\\ Joined the newly formed SRE team supported the Global E-commerce function of TikTok
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[\textasteriskcentered] Implemented a Kubernetes sidecar measuring the availability SLI of more than 200 HTTP services
-							\item[\textasteriskcentered] Designed and implemented an incident record tool reducing the manual bookkeeping activities during oncall cases
+							\item[\textasteriskcentered] Pushed for adoption of error budget burn rate alerts
+							\item[\textasteriskcentered] Designed and implemented the MVP of an incident record tool reducing the manual bookkeeping activities and establishing oncall knowledge base
 						\end{enumerate}
 					}
 				};
