--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -25,12 +25,13 @@
 			{Site Reliabily Engineer (SRE)}
 			{\href{https://www.bytedance.com/en}{Bytedance}}
 			{Singapore}
-			{Sept 2021 - Present}
+			{Sept 2021 - Oct 2022}
 			{
 				\\ Joined the newly formed SRE team supported the Global E-commerce function of TikTok
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Implemented a Kubernetes sidecar measuring the availability SLI of more than 200 HTTP services
-					\item[\textasteriskcentered] Designed and implemented an incident record tool reducing the manual bookkeeping activities during oncall cases
+					\item[\textasteriskcentered] Analysed SLI based alerts and pushed for adoption of error budget burn rate approach
+					\item[\textasteriskcentered] Designed and implemented the MVP version of an incident record tool aiming to reduce the manual bookkeeping activities during oncall cases and build a knowledge base based on them
 				\end{enumerate}
 			}
 
